syntax = "proto3";
package ET;

//ResponseType M2G_PlayerEnterMatchResponse
message G2M_PlayerEnterMatchRequest // IActorRequest
{
    int32 RpcId = 90;
    long PlayerID = 1;
    long UserID = 2;
    long SessionID = 3;
}

message M2G_PlayerEnterMatchResponse // IResponse
{
    int32 RpcId = 90;
    int32 Error = 91;
    string Message = 92;

}

//ResponseType M2M_CreateRoomResponse
message M2M_CreateRoomRequest // IActorRequest
{
    int32 RpcId = 90;

}

message M2M_CreateRoomResponse // IResponse
{
    int32 RpcId = 90;
    int32 Error = 91;
    string Message = 92;
    long RoomID = 1;
}

//ResponseType M2G_PlayerEnterRoomResponse
message G2M_PlayerEnterRoomRequest // IActorRequest
{
    int32 RpcId = 90;
    int64 ActorId = 91;
    long PlayerID = 1;
    long UserID = 2;
    long SessionID = 3;
}

message M2G_PlayerEnterRoomResponse // IResponse
{
    int32 RpcId = 90;
    int32 Error = 91;
    string Message = 92;
    long GamerID = 1;
}



//demo follow

//ResponseType ObjectQueryResponse
message ObjectQueryRequest // IActorRequest
{
	int32 RpcId = 90;
	int64 Key = 1;
	int64 InstanceId = 2;
}

//ResponseType A2M_Reload
message M2A_Reload // IActorRequest
{
	int32 RpcId = 90;
}

message A2M_Reload // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType G2G_LockResponse
message G2G_LockRequest // IActorRequest
{
	int32 RpcId = 90;
	int64 Id = 1;
	string Address = 2;
}

message G2G_LockResponse // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType G2G_LockReleaseResponse
message G2G_LockReleaseRequest // IActorRequest
{
	int32 RpcId = 90;
	int64 Id = 1;
	string Address = 2;
}

message G2G_LockReleaseResponse // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType ObjectAddResponse
message ObjectAddRequest // IActorRequest
{
	int32 RpcId = 90;
	int64 Key = 1;
	int64 InstanceId = 2;
}

message ObjectAddResponse // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType ObjectLockResponse
message ObjectLockRequest // IActorRequest
{
	int32 RpcId = 90;
	int64 Key = 1;
	int64 InstanceId = 2;
	int32 Time = 3;
}
message ObjectLockResponse // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType ObjectUnLockResponse
message ObjectUnLockRequest // IActorRequest
{
	int32 RpcId = 90;
	int64 Key = 1;
	int64 OldInstanceId = 2;
	int64 InstanceId = 3;
}
message ObjectUnLockResponse // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType ObjectRemoveResponse
message ObjectRemoveRequest // IActorRequest
{
	int32 RpcId = 90;
	int64 Key = 1;
}
message ObjectRemoveResponse // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType ObjectGetResponse
message ObjectGetRequest // IActorRequest
{
	int32 RpcId = 90;
	int64 Key = 1;
}
message ObjectGetResponse // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;

	int64 InstanceId = 1;
}

//ResponseType G2R_GetLoginKey
message R2G_GetLoginKey // IActorRequest
{
	int32 RpcId = 90;
	string Account = 1;
	long AccountId = 2;
}

message G2R_GetLoginKey // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;

	int64 Key = 1;
	int64 GateId = 2;
}

message M2M_UnitTransferResponse // IActorResponse
{
	int32 RpcId = 1;
	int32 Error = 2;
	string Message = 3;
	int64 NewInstanceId = 4;
}

message G2M_SessionDisconnect // IActorLocationMessage
{
	int32 RpcId = 90;
}